# just_simple_todo

./: Cargo.toml  README.md  diesel.toml
migrations/2025-09-11-224014_users_table/: up.sql
migrations/2025-09-11-231600_todos_table/: down.sql  up.sql
migrations/2025-09-11-234539_todos_users_fk/: up.sql
migrations/2025-09-12-001213_todos_column_update/: up.sql
migrations/2025-09-12-001457_todos_column_add_updated_at/: up.sql
migrations/2025-09-12-001706_users_update_created_at/: up.sql
migrations/2025-09-12-023412_users_add_passwrd_column/: up.sql
src/: app.rs  auth.rs  db.rs  handlers.rs  main.rs  models.rs  route.rs  schema.rs
