[package]
name = "Todo_new"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-http = { version = "0.6.2", features = ["cors"] }
diesel = {version = "2.2.12", features = ["postgres", "uuid", "chrono", "r2d2"]}
tokio = {version = "1.47.1", features = ["full"]}
time = { version = "0.3", features = ["macros"] }
uuid = { version = "1", features = ["serde", "v4"] }
jsonwebtoken = "9.3"
bcrypt = "0.17.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
axum = "0.8.4"
dotenvy = "0.15.7"
r2d2 = "0.8.10"
chrono = { version = "0.4.42", features = ["serde",] }
diesel-async = "0.6.1"
